<resources>
    <string name="app_name">NewRollCall</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forget Password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_error_message">Your account or password is incorrect</string>
    <string name="sign_up_error_message_already_exists">The Email already exists!!</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_up_success">Sign up Success</string>
    <string name="email">Email</string>
    <string name="email_format_error">The email is not in the correct format</string>
    <string name="password_format_error">密碼不得小於8個字元或不能有空白</string>
    <string name="confirm_password_error">兩次輸入的密碼不同</string>
    <string name="username_format_error">使用者名稱不得小於3個字元或不能有空白</string>
    <string name="username">User Name</string>
    <string name="please_wait">Please wait..</string>

    <string name="home">Home</string>
    <string name="group">Group</string>
    <string name="group_list_name">Group Name</string>


    <string name="dialog_ok">確定</string>
    <string name="dialog_cancel">取消</string>

    <string name="group_count">團數</string>
    <string name="people_count">人數：</string>
    <string name="drive_count">裝置數量</string>
    <string name="profile_image">個人頭像</string>
    <string name="profile_setting">個人設置</string>
    <string name="drive_setting">裝置設置</string>
    <string name="group_setting">團隊設置</string>

    <string name="group_delete">刪除</string>

    <string name="empty_icon_string">您還沒有任何旅遊團</string>
    <string name="scanning">找尋裝置中</string>
    <string name="scan">搜尋</string>
    <string name="scan_not_found_device">沒有找到任何裝置</string>
    <string name="not_found_device_in_group">這團隊沒有任何資料</string>
    <string name="scanner_stop">停止</string>
    <string name="groupname">團隊名稱</string>
    <string name="select_image_uri">選擇團隊圖示</string>
    <string name="create_group_title">創建團隊</string>
    <string name="group_name_not_allow_blank">團隊名稱不能有空白</string>
    <string name="create_group">新增</string>
    <string name="create_success">創建成功</string>
    <string name="create_fail">創建失敗</string>
    <string name="rollcall_over">點名結束</string>

    <string name="device_name_message">裝置名稱</string>
    <string name="device_address_message">裝置ID：%s</string>

    <string name="edit_device">編輯裝置</string>

    <string name="dialog_message">Dialog Message</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="coming_soon">coming soon</string>

    <string name="start_rollcall">開 始 點 名</string>
    <string name="todo_message">待 辦 事 項</string>
    <string name="setbledrive">設 定 集 合 時 間</string>
    <string name="setbledrive_title">設定集合時間</string>
    <string name="calender">日 程</string>

    <string name="add_success">新增成功</string>
    <string name="please_select_image">請選擇團隊圖示</string>

    <string name="plz_choice_group">請選擇團隊</string>

    <string name="rollcall_message">現在點名</string>
    <string name="rollcall_message2">(您尚未選擇團隊)</string>

    <string name="dialog_content_message1">新增團隊資訊</string>
    <string name="dialog_content_message2">是否現在將資訊加到 %s 中？</string>

    <string name="total_people">總共 %d 人</string>
    <string name="absence_people">%d 人沒來</string>

    <string name="item_device_name">RollCall_Device</string>
    <string name="item_device_address">RollCall_Address</string>

    <string name="test_number">87</string>

    <string name="ready_rollcall_team">點名團隊：</string>

    <string name="NotSupportBLE">"此裝置不支援BLE</string>

    <string name="ten_seconds">10秒鐘</string>
    <string name="nobody">0</string>

    <string name="setting">設定</string>
    <string name="setting_finsh">設定完成</string>

    <string name="make_sure_set_device">確定要設定這%d個裝置嗎?</string>

    <string name="set_time">設定時間</string>
    <string name="group_people_count">人數</string>

    <string name="connect_and_send">連線並傳送中…</string>

    <string name="log_out">登出</string>

    <string name="add_quickly">快速新增</string>
    <string name="edit_manually">手動編輯新增</string>

    <string name="device_not_support">此裝置不支援</string>

    <string name="permission_message">若您不允許權限,將無法使用此功能</string>
    <string name="roll_call">R o l l C a l l</string>


    <array name="spinner_time">
        <item>10秒鐘</item>
        <item>20秒鐘</item>
        <item>30分鐘</item>
        <item>45分鐘</item>
        <item>1小時</item>
        <item>1個半小時</item>
        <item>2小時</item>
    </array>
</resources>
