<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/AppBackgroundColor">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/relativeLayout"
        android:background="@color/theme_green" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textSize="17sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialog_title"
            android:id="@+id/dialog_title"
            android:layout_marginStart="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/white" />
    </RelativeLayout>


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:padding="10dip"
            android:text="@string/dialog_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_cancel"
            style="?attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_ok"
            style="?attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>