<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/AppBackgroundColor">


        <LinearLayout
            android:id="@+id/todo_button"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="20dp"
            android:background="@drawable/rollcall_button_press"
            android:orientation="vertical">


            <ImageView
                android:layout_margin="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_clock"
                android:contentDescription="@string/roll_call"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/todo_message" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/set_ble_drive"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:background="@drawable/rollcall_button_press"
            android:orientation="vertical">


            <ImageView
                android:layout_margin="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_setdrivetime"
                android:contentDescription="@string/roll_call"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/setbledrive" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/rollcall_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/rollcall_button_press"
            android:orientation="vertical">


            <ImageView
                android:layout_margin="8dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_rollcall"
                android:contentDescription="@string/roll_call"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/rollcall_message" />

            <TextView
                android:id="@+id/ready_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/rollcall_message2" />

        </LinearLayout>


    </RelativeLayout>
</layout>