<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/group_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:background="@color/bottom_white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:id="@+id/group_list_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/defult_card_iamge4"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/group_list_name"/>

                <TextView
                    android:id="@+id/group_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/group_list_name"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/card_setting"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/icon_setting"
                    android:contentDescription="@string/group_setting"/>

                <ImageView
                    android:id="@+id/delete_group"
                    android:layout_margin="8dp"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/icon_close"
                    android:contentDescription="@string/group_delete"/>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/people_count"
                    android:textColor="@color/AppBackgroundColor"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/people_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/test_number"
                    android:textColor="@color/AppBackgroundColor"
                    android:layout_weight="1"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_select_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBox"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>