<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardBackgroundColor="@color/app_background_color"
    card_view:cardCornerRadius="8dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/image_layout">

            <ImageView
                android:id="@+id/set_device_image"
                android:src="@mipmap/defult_card_iamge"
                android:scaleType="fitXY"
                android:contentDescription="@string/group_list_name"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/set_device_image"
            android:background="@color/theme_green">


            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nobody"
                    android:id="@+id/group_people_count"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/group_people_count"
                    android:id="@+id/setdevice_listname"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="@color/white" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ten_seconds"
                    android:id="@+id/settime"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/set_time"
                    android:id="@+id/settime_txt"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>